added article section and section tab classes to portfolio. edited navbar

--- a/journalism.html
+++ b/journalism.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/worksstyle.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter&display=swap" rel="stylesheet">
+    <title>Journalism</title>
 </head>
 <body>
+    <nav class="nav header-nav pl-5">
+        <a class="header-main" href="index.html">MAUREEN SALAMON</a>
+        <a class="nav-item navtab" href="journalism.html">Journalism</a>
+        <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
+    </nav>
+    <div class="image-holder text-center">
+        <img id="journal-jumbo" src="assets/images/ultimateselfie.jpeg" alt="jumbotron">
+    </div>
+    <div class="flex-container">
+        <div class="article-box">
+            <img src="assets/images/cnn.png" alt="cnn" class="logo">
+            <div class="article-headline">
+                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+            </div>
+        </div>
+        <div class="article-box">
+            <img src="assets/images/atlantic.png" alt="atlantic" class="logo">
+            <div class="article-headline">
+                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+            </div>
+        </div>
+        <div class="article-box">
+            <img src="assets/images/genome.jpg" alt="genome" class="logo">
+            <div class="article-headline">
+                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+            </div>
+        </div>
+        <div class="article-box">
+            <img src="assets/images/nyt.jpg" alt="nyt" class="logo">
+            <div class="article-headline">
+                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+            </div>
+        </div>
+    </div>
+
     
 </body>
 </html>
