--- a/contentmarketing.html
+++ b/contentmarketing.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/worksstyle.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>Content Marketing</title>
 </head>
 <body>
+    <nav class="nav header-nav pl-5">
+        <span class="navbar-brand h1">Maureen Salamon</span>
+        <a class="nav-item navtab" href="index.html" target="#">Home</a>
+        <a class="nav-item navtab" href="journalism.html" target="#">Journalism</a>
+        <a class="nav-item navtab" href="contentmarketing.html" target="#">Content Marketing</a>
+    </nav>
     
 </body>
 </html>
