--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/indexstyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Maureen Salamon</title>
 </head>
 <body>
     <nav class="nav header-nav pl-5">
-        <span class="navbar-brand h1">Maureen Salamon</span>
-        <a class="nav-item navtab" href="journalism.html" target="#">Journalism</a>
-        <a class="nav-item navtab" href="contentmarketing.html" target="#">Content Marketing</a>
+        <a class="header-main" href="index.html">MAUREEN SALAMON</a>
+        <a class="nav-item navtab" href="journalism.html">Journalism</a>
+        <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
     </nav>
     <div class="main-body">
         <div class="text-area">
