resized article box

--- a/journalism.html
+++ b/journalism.html
@@ -21,7 +21,7 @@
         <div class="article-box">
             <img src="assets/images/cnn.png" alt="cnn" class="logo">
             <div class="article-headline">
-                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Who Should Pay For Mom And Dad's Care?</a>
             </div>
         </div>
         <div class="article-box">
@@ -33,7 +33,7 @@
         <div class="article-box">
             <img src="assets/images/genome.jpg" alt="genome" class="logo">
             <div class="article-headline">
-                <a href="https://local.theonion.com/barber-i-was-a-barber-says-man-struggling-to-recall-1842899648" target="#" class="headline">Filler Text</a>
+                <a href="http://www.genomemag.com/genes-that-protect-you-from-disease/#.XpnGpMhKiUm" target="#" class="headline">Genes That Protect You From Disease</a>
             </div>
         </div>
         <div class="article-box">
