redesign of home page

--- a/journalism.html
+++ b/journalism.html
@@ -27,6 +27,12 @@
             </div>
         </div>
         <div class="article-box">
+            <img src="assets/images/medscape.png" alt="medscape" class="logo">
+            <div class="article-headline">
+                <a href="https://www.medscape.com/viewarticle/929122" target="#" class="headline">Surge Or No Surge, The Midwest Readies for COVID-19</a>
+            </div>
+        </div>
+        <div class="article-box">
             <img src="assets/images/genome.jpg" alt="genome" class="logo">
             <div class="article-headline">
                 <a href="http://www.genomemag.com/genes-that-protect-you-from-disease/#.XpnGpMhKiUm" target="#" class="headline">Genes That Protect You From Disease</a>
@@ -78,12 +84,6 @@
             <img src="assets/images/webmd.png" alt="webmd" class="logo">
             <div class="article-headline">
                 <a href="https://www.webmd.com/baby/fertility-sexual-positions" target="#" class="headline">Do Some Sex Positions Help Chances Of Conception?</a>
-            </div>
-        </div>
-        <div class="article-box">
-            <img src="assets/images/medscape.png" alt="medscape" class="logo">
-            <div class="article-headline">
-                <a href="https://www.medscape.com/viewarticle/928038" target="#" class="headline">A Decade Of Telemedicine Policy Has Advanced In Just 2 Weeks</a>
             </div>
         </div>
         <div class="article-box">
