--- a/about.html
+++ b/about.html
@@ -16,14 +16,21 @@
         <a class="nav-item navtab" href="journalism.html">Journalism</a>
         <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
     </nav>
+    <div class="main-body">
         <div class="text-area">
             <div class="intro-text">
-                <h1 class="intro-title">Maureen Salamon</h1>
-                <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator, and GhostWriter</h3>
+                <h1>Maureen Salamon</h1>
+                <h5>Health and Medical Writer, Content Marketing Creator, and GhostWriter</h3>
             </div>
             <div class="description-text">
                 Everyone likes a good story, well-told. Whether the audience is consumers or healthcare professionals, I write about health and medicine in way that resonates, enlightens and provokes. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite frequently for MDs and PhDs.
             </div>
         </div>
+        <div class="image-holder">
+            <div class="image-slot text-center">
+                <img src="assets/images/headshot.jpeg" class="headshot" alt="headshot">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
