completed basic redesign of home page, added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
     <title>Maureen Salamon</title>
 </head>
 <body>
@@ -13,17 +19,21 @@
         <a class="header-main" href="index.html">
             <button class="header-button">MAUREEN SALAMON</button>
         </a>
+        <a class="nav-item navtab" href="journalism.html">About</a>
         <a class="nav-item navtab" href="journalism.html">Journalism</a>
         <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
+        <a class="nav-item navtab" href="contentmarketing.html">Contact</a>
     </nav>
+    <div class="background">
         <div class="text-area">
             <div class="intro-text">
                 <h1 class="intro-title">Maureen Salamon</h1>
-                <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator, and GhostWriter</h3>
+                <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator and Ghostwriter</h3>
             </div>
             <div class="description-text">
-                Everyone likes a good story, well-told. Whether the audience is consumers or healthcare professionals, I write about health and medicine in way that resonates, enlightens and provokes. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite frequently for MDs and PhDs.
+                <span class="pop-out">Everyone likes a good story.</span><br>Whether the audience is consumers or healthcare professionals, I write about health and medicine in ways that resonate, enlighten and provoke. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite frequently for MDs and PhDs.
             </div>
         </div>
+    </div>
 </body>
 </html>
