finalized header for all pages. updated anchors. added placeholder favicon

--- a/about.html
+++ b/about.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/indexstyle.css">
+    <link rel="stylesheet" href="assets/css/aboutstyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Maureen Salamon</title>
 </head>
 <body>
@@ -13,24 +17,10 @@
         <a class="header-main" href="index.html">
             <button class="header-button">MAUREEN SALAMON</button>
         </a>
+        <a class="nav-item navtab" href="about.html">About</a>
         <a class="nav-item navtab" href="journalism.html">Journalism</a>
         <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
+        <a class="nav-item navtab" href="contact.html">Contact</a>
     </nav>
-    <div class="main-body">
-        <div class="text-area">
-            <div class="intro-text">
-                <h1>Maureen Salamon</h1>
-                <h5>Health and Medical Writer, Content Marketing Creator, and GhostWriter</h3>
-            </div>
-            <div class="description-text">
-                Everyone likes a good story, well-told. Whether the audience is consumers or healthcare professionals, I write about health and medicine in way that resonates, enlightens and provokes. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite frequently for MDs and PhDs.
-            </div>
-        </div>
-        <div class="image-holder">
-            <div class="image-slot text-center">
-                <img src="assets/images/headshot.jpeg" class="headshot" alt="headshot">
-            </div>
-        </div>
-    </div>
 </body>
 </html>
