--- a/journalism.html
+++ b/journalism.html
@@ -9,15 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Journalism</title>
 </head>
 <body>
     <div class="wrapper">
         <nav class="nav header-nav pl-5">
-            <a class="header-main" href="index.html">MAUREEN SALAMON</a>
+            <a class="header-main" href="index.html">
+                <button class="header-button">MAUREEN SALAMON</button>
+            </a>
+            <a class="nav-item navtab" href="about.html">About</a>
             <a class="nav-item navtab" href="journalism.html">Journalism</a>
             <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
+            <a class="nav-item navtab" href="contentmarketing.html">Contact</a>
         </nav>
+        
         <div class="image-holder text-center">
             <img id="journal-jumbo" src="assets/images/ultimateselfie.png" alt="jumbotron">
         </div>
