--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/contactstyle.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
+    <title>Maureen Salamon</title>
 </head>
 <body>
-    
+    <nav class="nav header-nav pl-5">
+        <a class="header-main" href="index.html">
+            <button class="header-button">MAUREEN SALAMON</button>
+        </a>
+        <a class="nav-item navtab" href="about.html">About</a>
+        <a class="nav-item navtab" href="journalism.html">Journalism</a>
+        <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
+        <a class="nav-item navtab" href="contact.html">Contact</a>
+    </nav>
 </body>
 </html>
