--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Maureen Salamon</title>
 </head>
 <body>
@@ -19,10 +21,10 @@
         <a class="header-main" href="index.html">
             <button class="header-button">MAUREEN SALAMON</button>
         </a>
-        <a class="nav-item navtab" href="journalism.html">About</a>
+        <a class="nav-item navtab" href="about.html">About</a>
         <a class="nav-item navtab" href="journalism.html">Journalism</a>
         <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
-        <a class="nav-item navtab" href="contentmarketing.html">Contact</a>
+        <a class="nav-item navtab" href="contact.html">Contact</a>
     </nav>
     <div class="background">
         <div class="text-area">
@@ -31,7 +33,7 @@
                 <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator and Ghostwriter</h3>
             </div>
             <div class="description-text">
-                <span class="pop-out">Everyone likes a good story.</span><br>Whether the audience is consumers or healthcare professionals, I write about health and medicine in ways that resonate, enlighten and provoke. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite frequently for MDs and PhDs.
+                <span class="pop-out">Everyone likes a good story.</span><br>Whether the audience is consumers or healthcare professionals, I write about health and medicine in ways that resonate, enlighten and provoke. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite for MDs and PhDs.
             </div>
         </div>
     </div>
