--- a/about.html
+++ b/about.html
@@ -22,5 +22,19 @@
         <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
         <a class="nav-item navtab" href="contact.html">Contact</a>
     </nav>
+
+    <div class="flex-container">
+        <div class="image-slot">
+            <img src="assets/images/headshot.jpeg" alt="headshot" class="headshot">
+        </div>
+        <div class="text-slot">
+            <p>I was the only little girl I knew who actually liked getting dragged to the barber shop for her brothers’ haircuts. Why? The waiting area always held the newest Reader’s Digest, which I would immediately flip open to its monthly “Medical Mystery” feature. I was oddly captivated by the workings of the human body, how things could go terribly wrong, and the ingenuity it took to save people’s lives.<br><br>
+
+                But my fascination didn’t end there. By high school I was strangely gleeful when dissecting cow eyeballs and fetal pigs, my boundless curiosity in full force. “You sure do ask a lot of questions, Mo,” my biology teacher would tell me, a mix of affection and tedium etched in his voice. A series of unlikely events had me majoring in journalism at Penn State a few years later. It was wonderful preparation to become a daily newspaper reporter, where – astoundingly – I was now paid to ask questions. The job was a heady, delicious blend of seeking and finding and telling people’s stories.<br><br>   
+                
+                Years later, the newspaper industry’s sad fade presented a quandary cloaked in opportunity: How to pivot as a professional writer? Suddenly it all made sense: I should write about the medical marvels, mysteries and movements that had always stolen my attention. And it’s been a wild ride. I’ve traveled the globe covering major medical conferences, written for top publications and become a go-to writer for some of the most esteemed hospitals in the United States. I not only get paid to ask questions, I get paid to tell people what I’ve learned. It doesn’t get much better than that.  
+            </p>
+        </div>
+    </div>
 </body>
 </html>
