begun reworking of journalism page

--- a/journalism.html
+++ b/journalism.html
@@ -23,17 +23,25 @@
             <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
             <a class="nav-item navtab" href="contentmarketing.html">Contact</a>
         </nav>
-        
-        <div class="image-holder text-center">
-            <img id="journal-jumbo" src="assets/images/ultimateselfie.png" alt="jumbotron">
-        </div>
-
-        <div class="intro-area">
-            <h1 class="intro-area-text">I cut my journalistic teeth at newspapers. But the same core group of skills I honed as a boots-on-the-ground reporter – insightful interviewing, meticulous researching and hitting my deadlines, every time – are just as relevant to my health and medical writing business. From long-form features to pithy research-based pieces to celebrity profiles – with an occasional detour to compelling lifestyle topics – my work has explored nearly every corner of physical and mental health. Highlights from my portfolio are below.</h1>
-        </div>
 
         <div class="flex-container">
-            <div class="article-box">
+
+              <div class="card whole-card" style="width: 18rem">
+                <img src="assets/images/cnn.png" class="card-img-top card-image-set" alt="cnn">
+                <div class="card-body text-center card-body-section">
+                  <h5 class="card-title card-headline">Who Should Pay For Mom And Dad's Care?</h5>
+                </div>
+              </div>
+
+              <div class="card whole-card" style="width: 18rem">
+                <img src="assets/images/cnn.png" class="card-img-top card-image-set" alt="cnn">
+                <div class="card-body text-center card-body-section">
+                  <h5 class="card-title card-headline">Who Should Pay For Mom And Dad's Care?</h5>
+                </div>
+              </div>
+
+
+            <!-- <div class="article-box">
                 <img src="assets/images/cnn.png" alt="cnn" class="logo">
                 <div class="article-headline">
                     <a href="http://www.cnn.com/2008/LIVING/personal/08/20/lw.siblings.pay.you.care.parents/" target="#" class="headline">Who Should Pay For Mom And Dad's Care?</a>
@@ -104,7 +112,7 @@
                 <div class="article-headline">
                     <a href="https://consumer.healthday.com/diseases-and-conditions-information-37/psoriasis-news-621/cyndi-lauper-s-psoriasis-battle-shows-her-true-colors-727836.html" target="#" class="headline">Cyndi Lauper's Psoriasis Battle Shows Her 'True Colors'</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     
