beginning overhaul of site color scheme

--- a/journalism.html
+++ b/journalism.html
@@ -38,7 +38,7 @@
 
         <div class="bottom-container">
 
-            <a class="card whole-card" href="http://www.cnn.com/2008/LIVING/personal/08/20/lw.siblings.pay.you.care.parents/" target="#" style="width: 18rem">
+            <a class="card whole-card" href="http://www.cnn.com/2008/LIVING/personal/08/20/lw.siblings.pay.you.care.parents/" target="#" style="width: 18rem; border: 1px solid black">
                 <div class="card-img-top" style="display: flex; justify-content: center; align-items: center">
                     <img src="assets/images/cnn.png" class="card-image-set" alt="cnn">
                 </div>
