--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Maureen Salamon</title>
 </head>
@@ -30,10 +31,15 @@
         <div class="text-area">
             <div class="intro-text">
                 <h1 class="intro-title">Maureen Salamon</h1>
-                <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator and Ghostwriter</h3>
+                <h5 class="intro-description">Health and Medical Writer, Content Marketing Creator and Ghostwriter</h5>
             </div>
             <div class="description-text">
                 <span class="pop-out">Everyone likes a good story.</span><br>Whether the audience is consumers or healthcare professionals, I write about health and medicine in ways that resonate, enlighten and provoke. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite for MDs and PhDs.
+            </div>
+            <div class="icon-holder">
+                <a href="https://www.facebook.com/maureen.salamon" class="fa fa-facebook"></a>
+                <a href="https://www.linkedin.com/in/maureen-quinn-salamon-8a1a099/" class="fa fa-linkedin"></a>
+                <a href="https://twitter.com/maureensalamon?lang=en" class="fa fa-twitter"></a>
             </div>
         </div>
     </div>
