added responsiveness to social media buttons

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <span class="pop-out">Everyone likes a good story.</span><br>Whether the audience is consumers or healthcare professionals, I write about health and medicine in ways that resonate, enlighten and provoke. A longtime freelancer and former daily newspaper reporter, I’ve covered the gamut of health conditions – from the common to the obscure – as well as the remarkable people and organizations who bring leading-edge medical advances to life. I’ve tackled patient stories for consumers, complex medical topics aimed at physicians, and the vast space in between. I also ghostwrite for MDs and PhDs.
             </div>
             <div class="icon-holder">
-                <a href="https://www.facebook.com/maureen.salamon" class="fa fa-facebook"></a>
-                <a href="https://www.linkedin.com/in/maureen-quinn-salamon-8a1a099/" class="fa fa-linkedin"></a>
-                <a href="https://twitter.com/maureensalamon?lang=en" class="fa fa-twitter"></a>
+                <a href="https://www.facebook.com/maureen.salamon" target="#" class="fa fa-facebook"></a>
+                <a href="https://www.linkedin.com/in/maureen-quinn-salamon-8a1a099/" target="#" class="fa fa-linkedin"></a>
+                <a href="https://twitter.com/maureensalamon?lang=en" target="#" class="fa fa-twitter"></a>
             </div>
         </div>
     </div>
