began design of content marketing page

--- a/contentmarketing.html
+++ b/contentmarketing.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/worksstyle.css">
+    <link rel="stylesheet" href="assets/css/contentmarketstyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Content Marketing</title>
 </head>
@@ -23,5 +20,28 @@
         <a class="nav-item navtab" href="contact.html">Contact</a>
     </nav>
     
+    <div class="container" style="padding-top: 20px">
+        <div class="row">
+            <div class="col-sm-4">
+                <a href="https://www.mskcc.org/blog/truth-behind-three-natural-cures" target="#" style="text-decoration: none">
+                    <div class="image-holder img1">
+                        <span class="client">Memorial Sloan Kettering Cancer Center</span>
+                        <span class="title">The Truth Behind Three Natural Cancer ‘Cures’</span>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-4">
+                <a href="https://www.stjude.org/about-st-jude/stories/promise-magazine/summer-2017/finding-the-magic-in-cell-death.html" target="#" style="text-decoration: none">
+                    <div class="image-holder img2">
+                        <span class="client">St. Jude Children’s Research Hospital</span>
+                        <span class="title">Finding the Magic in Cell Death</span>
+                    </div>
+                </a>
+            </div>
+            <div class="col-sm-4">
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
