adding express and middleware for mailing server

--- a/contact.html
+++ b/contact.html
@@ -20,23 +20,39 @@
         <a class="nav-item navtab" href="contact.html">Contact</a>
     </nav>
 
-    <form class="my-form">
-        <div class="form-group">
-            <label for="inputName">Name:</label>
-            <input type="text" class="form-control" id="inputName">
-          </div>
-        <div class="form-group">
-          <label for="inputEmail">Email address:</label>
-          <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted" style="font-size: 0.8em">We'll never share your email with anyone else.</small>
+    <!-- <div class="container top-container">
+        <div class="row" style="border: 1px solid black">
+            <div class="col-md-3" style="display: flex; align-items: center; justify-content: center; padding: 1%; text-align: center">
+                <h1 style="font-family: 'Libre Baskerville', serif; border: 1px solid black">Contact Me</h1>
+            </div>
+            <div class="col-md-9" style="display: flex; align-items: center; justify-content: center; padding: 1%;">
+                <p style="font-family: 'Lusitana', serif; text-align: center; border: 1px solid black">Interested in working with me? Shoot me a message with your name and email address below, and I'll get back to you as soon as possible.</p>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="inputMessage">Message:</label>
-            <textarea type="text" class="form-control" id="inputMessage" rows="4">
+    </div> -->
+    <div class="wrapper">
+        <div class="top-container">
+            
+        </div>
 
-            </textarea>
-          </div>
-        <button type="submit" class="btn btn-primary" style="width: 200px; margin: auto">Send</button>
-    </form>
+        <form class="my-form">
+            <div class="form-group">
+                <label for="inputName">Name:</label>
+                <input type="text" class="form-control" id="inputName">
+            </div>
+            <div class="form-group">
+            <label for="inputEmail">Email address:</label>
+            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted" style="font-size: 0.8em">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+                <label for="inputMessage">Message:</label>
+                <textarea type="text" class="form-control" id="inputMessage" rows="4">
+
+                </textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" style="width: 200px; margin: auto">Send</button>
+        </form>
+    </div>
 </body>
 </html>
