additions to contact page style

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <title>Maureen Salamon</title>
@@ -23,13 +24,14 @@
 
     <div class="wrapper">
         <div class="top-container">
-            
+            <h1>Contact</h1>
+            <h3>Want to work with me? Send me a message below and I'll get back to you as soon as possible.</h3>
         </div>
 
         <form class="my-form" action="/send" method="POST">
             <div class="form-group">
                 <label for="inputName">Name:</label>
-                <input type="text" class="form-control" id="inputName" value="test">
+                <input type="text" class="form-control" id="inputName">
             </div>
             <div class="form-group">
                 <label for="inputEmail">E-mail Address:</label>
