converted app to express server view / MVC

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
 </head>
 <body>
     <nav class="nav header-nav pl-5">
-        <a class="header-main" href="index.html">
+        <a class="header-main" href="/">
             <button class="header-button">MAUREEN SALAMON</button>
         </a>
-        <a class="nav-item navtab" href="about.html">About</a>
-        <a class="nav-item navtab" href="journalism.html">Journalism</a>
-        <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
-        <a class="nav-item navtab" href="contact.html">Contact</a>
+        <a class="nav-item navtab" href="/about">About</a>
+        <a class="nav-item navtab" href="/journalism">Journalism</a>
+        <a class="nav-item navtab" href="/contentmarketing">Content Marketing</a>
+        <a class="nav-item navtab" href="/contact">Contact</a>
     </nav>
     <div class="background">
         <div class="text-area">
