--- a/public/journalism.html
+++ b/public/journalism.html
@@ -13,13 +13,13 @@
 <body>
     <div class="wrapper">
         <nav class="nav header-nav pl-5">
-            <a class="header-main" href="index.html">
+            <a class="header-main" href="/">
                 <button class="header-button">MAUREEN SALAMON</button>
             </a>
-            <a class="nav-item navtab" href="about.html">About</a>
-            <a class="nav-item navtab" href="journalism.html">Journalism</a>
-            <a class="nav-item navtab" href="contentmarketing.html">Content Marketing</a>
-            <a class="nav-item navtab" href="contact.html">Contact</a>
+            <a class="nav-item navtab" href="/about">About</a>
+            <a class="nav-item navtab" href="/journalism">Journalism</a>
+            <a class="nav-item navtab" href="/contentmarketing">Content Marketing</a>
+            <a class="nav-item navtab" href="/contact">Contact</a>
         </nav>
 
         <div class="container" style="padding-top: 50px; padding-bottom: 50px">
